--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -229,8 +229,8 @@ img {
 .coin__title {
   display: block;
   margin-left: 8px;
-    min-width: 160px;
-text-align: left;
+  min-width: 160px;
+  text-align: left;
 }
 
 .coin__symbol {
@@ -242,12 +242,17 @@ text-align: left;
   width: 50px;
 }
 
+// Dark Mode
+body,
+.navbar {
+  transition: 5000ms ease;
+}
 .dark-mode {
   color: #fff;
   background-color: #313843;
 
   .navbar {
-    background-color: #1F2022;
+    background-color: #1f2022;
     border: none;
   }
 }
